# blender_dualnode

./: CMakeLists.txt
build_files/build_environment/: CMakeLists.txt  dependencies.dot  install_deps.sh
build_files/build_environment/cmake/: alembic.cmake  aom.cmake  boost.cmake  boost_build_options.cmake  check_software.cmake  cve_check.cmake  cve_check.csv.in  download.cmake  dpcpp.cmake  embree.cmake  epoxy.cmake  ffmpeg.cmake  freetype.cmake  fribidi.cmake  gmp.cmake  harfbuzz.cmake  harvest.cmake  jpeg.cmake  llvm.cmake  materialx.cmake  mesa.cmake  minizipng.cmake  opencollada.cmake  opencolorio.cmake  openexr.cmake  openimageio.cmake  openpgl.cmake  opensubdiv.cmake  openvdb.cmake  options.cmake  osl.cmake  png.cmake  pybind11.cmake  python.cmake  shaderc.cmake  sndfile.cmake  sqlite.cmake  ssl.cmake  tbb.cmake  tiff.cmake  (+3 more)
build_files/build_environment/patches/: embree.diff  ffmpeg.diff  opencollada.diff  openvdb.diff  osl.diff  python_windows.diff  usd.diff
build_files/build_environment/windows/: build_deps.cmd
build_files/buildbot/config/: blender_linux.cmake
build_files/cmake/: macros.cmake  packaging.cmake
build_files/cmake/Modules/: FindOpenSubdiv.cmake  (+5 more)
build_files/config/: pipeline_config.yaml
build_files/utils/: make_update.py
intern/cycles/: CMakeLists.txt
intern/ffmpeg/: CMakeLists.txt
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IContext.h
intern/locale/: CMakeLists.txt
intern/opensubdiv/: CMakeLists.txt
release/datafiles/: startup.blend
release/scripts/: usercustomize.py
source/blender/: CMakeLists.txt
source/blender/geometry/: CMakeLists.txt  GEO_constraint_solver.hh
source/blender/geometry/intern/: constraint_solver.cc  mesh_to_volume.cc  realize_instances.cc
source/blender/geometry/tests/: GEO_constraint_solver_test.cc
source/blender/geometry/tests/performance/: CMakeLists.txt  GEO_constraint_solver_performance_test.cc
source/creator/: CMakeLists.txt  creator.c  creator_args.c  symbols_apple.map
tests/python/: CMakeLists.txt  bl_run_operators.py  eevee_render_tests.py  gpu_info.py
(+924 files in other folders)
